--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_attendees_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_attendees_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Attendees"
+        android:text="Select Attendees"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/black_color" />
 
@@ -26,6 +26,20 @@
         android:dividerHeight="0dp"
         android:visibility="visible" />
 
+    <TextView
+        android:id="@+id/additional_adult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:background="@color/white_color"
+        android:drawableLeft="@drawable/add_xxhdpi"
+        android:drawablePadding="10dp"
+        android:gravity="center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:text="ADDITIONAL ADULT ACCOUNT"
+        android:textColor="@color/blue_color"
+        android:textSize="15sp" />
 
     <RelativeLayout
         android:id="@+id/footer"
@@ -43,6 +57,7 @@
             android:layout_alignParentTop="true"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="30dp"
+            android:layout_toLeftOf="@+id/done"
             android:layout_toStartOf="@+id/done"
             android:gravity="right"
             android:padding="2dp"
