--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_create_task.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_create_task.xml
@@ -49,19 +49,83 @@
                     android:drawableBottom="@drawable/underline"
                     android:drawablePadding="5dp"
                     android:gravity="left"
-                    android:hint="Enter Task"
+                    android:hint="Enter Task   (Required)"
                     android:inputType="textCapWords"
                     android:singleLine="true"
                     android:textColor="@color/black_color" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="2dp"
+                        android:text="ASSIGNED TO"
+                        android:layout_marginTop="20dp"
+                        android:textColor="@color/greytxt_color" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:padding="2dp"
+                        android:text="*"
+
+                        android:textColor="#ff0000"
+                        />
+
+
+
+                </LinearLayout>
+
+
+
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/task_attendee"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:padding="2dp"
-                    android:text="DUE"
-                    android:textColor="@color/greytxt_color" />
+                    android:layout_marginBottom="10dp"
+                    android:background="@null"
+                    android:drawableBottom="@drawable/underline"
+                    android:drawablePadding="3dp"
+                    android:drawableRight="@drawable/drop_down_arrowxxhdpi"
+                    android:gravity="left"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="2dp"
+                    android:paddingTop="5dp"
+                    android:textColor="@color/black_color" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:padding="2dp"
+                        android:text="DUE"
+                        android:textColor="@color/greytxt_color" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:padding="2dp"
+                        android:text="*"
+                        android:textColor="#ff0000"
+                        />
+
+
+                </LinearLayout>
+
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -130,6 +194,8 @@
 
 
                 </LinearLayout>
+
+
 
                 <TextView
                     android:id="@+id/repeat_text"
@@ -226,28 +292,6 @@
                     android:paddingTop="5dp"
                     android:textColor="@color/black_color" />
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="2dp"
-                    android:text="ASSIGNED TO"
-                    android:textColor="@color/greytxt_color" />
-
-                <TextView
-                    android:id="@+id/task_attendee"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@null"
-                    android:drawableBottom="@drawable/underline"
-                    android:drawablePadding="3dp"
-                    android:drawableRight="@drawable/drop_down_arrowxxhdpi"
-                    android:gravity="left"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="2dp"
-                    android:paddingTop="5dp"
-                    android:textColor="@color/black_color" />
 
                 <TextView
                     android:layout_width="wrap_content"
