--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/base_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_bg"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="5dp"
     android:scrollbars="none">
 
 
@@ -18,6 +19,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_margin="3dp"
+                card_view:cardCornerRadius="3dp"
+                card_view:cardElevation="6dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,7 +41,7 @@
                     android:layout_marginBottom="8dp"
                     android:background="@color/home_purple"
                     android:orientation="horizontal"
-                    android:padding="8dp"
+
                     android:weightSum="1">
 
 
@@ -44,6 +52,7 @@
                         android:layout_weight=".2">
 
                         <ImageView
+                            android:id="@+id/go_to_cal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -66,11 +75,14 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight=".7"
+                        android:layout_weight="0.7"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
                         android:text="@string/home_appointment"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/txt_appointment"/>
 
                     <ImageView
                         android:id="@+id/add_appointment"
@@ -96,16 +108,16 @@
                     android:layout_height="1dp"
                     android:background="@color/home_bg" />
 
-                <TextView
-                    android:id="@+id/go_to_cal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:text="@string/home_gotoCalendar"
-                    android:textColor="@color/home_light_blue"
-                    android:textStyle="bold" />
 
             </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_margin="3dp"
+                card_view:cardCornerRadius="3dp"
+                card_view:cardElevation="6dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -120,11 +132,11 @@
                     android:layout_height="wrap_content"
                     android:background="@color/home_green"
                     android:orientation="horizontal"
-                    android:padding="8dp"
                     android:weightSum="1">
 
 
                     <ImageView
+                        android:id="@+id/go_to_task"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -136,10 +148,13 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".7"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
                         android:text="To Do"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/txt_todo"/>
 
                     <ImageView
                         android:id="@+id/add_task"
@@ -168,16 +183,15 @@
                     android:layout_height="1dp"
                     android:background="@color/home_bg" />
 
-                <TextView
-                    android:id="@+id/go_to_task"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:text="@string/home_goto_todo"
-                    android:textColor="@color/home_light_blue"
-                    android:textStyle="bold" />
+
 
             </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
 
             <LinearLayout
                 android:id="@+id/eventsss"
@@ -194,11 +208,11 @@
                     android:layout_height="wrap_content"
                     android:background="@color/home_blue"
                     android:orientation="horizontal"
-                    android:padding="8dp"
                     android:weightSum="1">
 
 
                     <ImageView
+                        android:id="@+id/go_to_events"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -211,9 +225,12 @@
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".8"
                         android:text="@string/home_events"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/txt_events"/>
 
 
                 </LinearLayout>
@@ -230,7 +247,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="2dp"
-                    android:text="No Events Listed"
+                    android:text="No events listed for Today"
                     android:textColor="@color/grey"
                     android:textSize="12dp"
                     android:visibility="gone" />
@@ -243,15 +260,17 @@
                     android:divider="@color/dividercolor"
                     android:dividerHeight="0.3dp" />
 
-                <TextView
-                    android:id="@+id/go_to_events"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:text="@string/home_goto_event"
-                    android:textColor="@color/home_light_blue"
-                    android:textStyle="bold" />
+
             </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_margin="3dp"
+                card_view:cardCornerRadius="3dp"
+                card_view:cardElevation="6dp">
 
 
             <LinearLayout
@@ -269,11 +288,11 @@
                     android:layout_marginTop="10dp"
                     android:background="#ce92d8"
                     android:orientation="horizontal"
-                    android:padding="8dp"
                     android:weightSum="1">
 
 
                     <ImageView
+                        android:id="@+id/go_to_blog"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -286,9 +305,12 @@
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".8"
                         android:text="Blogs"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/txt_blogs"/>
 
 
                 </LinearLayout>
@@ -318,16 +340,9 @@
                     android:divider="@color/dividercolor"
                     android:dividerHeight="0.3dp" />
 
-                <TextView
-                    android:id="@+id/go_to_blog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:text="@string/home_goto_blog"
-                    android:textColor="@color/home_light_blue"
-                    android:textStyle="bold" />
 
             </LinearLayout>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
