--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_cal__month.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_cal__month.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -210,14 +211,24 @@
 
     </FrameLayout>
 
-    <ImageView
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_appointment_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:padding="10dp"
-        android:src="@drawable/add_bluexxhdpi" />
+        android:layout_margin="10dp"
+        android:clickable="true"
+        app:fabSize="normal"
+        android:elevation="6dp"
+        app:borderWidth="0dp"
+        android:scaleType="fitXY"
+        app:pressedTranslationZ="12dp"
+        android:src="@drawable/plus_icon"
+        app:backgroundTint="#3F51B5"
+        app:rippleColor="#E91E63"
+        />
+
 
 </RelativeLayout>
