--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_create_task.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_create_task.xml
@@ -49,7 +49,7 @@
                     android:drawableBottom="@drawable/underline"
                     android:drawablePadding="5dp"
                     android:gravity="left"
-                    android:hint="Enter Task   (Required)"
+                    android:hint="Enter Task"
                     android:inputType="textCapWords"
                     android:singleLine="true"
                     android:textColor="@color/black_color" />
