02 Nov Release changes JIRA Issues AA-77, AA-78, AA-79, AA-80, AA-81, AA-83, AA-84, AA-85, AA-89

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_cal__month.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_cal__month.xml
@@ -211,24 +211,14 @@
 
     </FrameLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <ImageView
         android:id="@+id/add_appointment_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
-        android:clickable="true"
-        app:fabSize="normal"
-        android:elevation="6dp"
-        app:borderWidth="0dp"
-        android:scaleType="fitXY"
-        app:pressedTranslationZ="12dp"
-        android:src="@drawable/plus_icon"
-        app:backgroundTint="#3F51B5"
-        app:rippleColor="#E91E63"
-        />
-
+        android:padding="10dp"
+        android:src="@drawable/add_bluexxhdpi" />
 
 </RelativeLayout>
