--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_create_task.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_create_task.xml
@@ -62,9 +62,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
                         android:padding="2dp"
                         android:text="ASSIGNED TO"
-                        android:layout_marginTop="20dp"
                         android:textColor="@color/greytxt_color" />
 
                     <TextView
@@ -74,14 +74,10 @@
                         android:padding="2dp"
                         android:text="*"
 
-                        android:textColor="#ff0000"
-                        />
-
+                        android:textColor="#ff0000" />
 
 
                 </LinearLayout>
-
-
 
 
                 <TextView
@@ -118,13 +114,10 @@
                         android:layout_marginTop="7dp"
                         android:padding="2dp"
                         android:text="*"
-                        android:textColor="#ff0000"
-                        />
+                        android:textColor="#ff0000" />
 
 
                 </LinearLayout>
-
-
 
 
                 <LinearLayout
@@ -194,7 +187,6 @@
 
 
                 </LinearLayout>
-
 
 
                 <TextView
@@ -342,7 +334,7 @@
                     android:drawableBottom="@drawable/underline"
                     android:drawablePadding="5dp"
                     android:hint="Add a note"
-                    android:inputType="textCapWords"
+                    android:inputType="textCapWords|textMultiLine"
                     android:paddingBottom="5dp"
                     android:paddingLeft="2dp"
                     android:paddingTop="5dp"
