--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_detail_article_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_detail_article_new.xml
@@ -346,6 +346,19 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/black_color" />
 
+
+                <Button
+                    android:id="@+id/share_spouse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/comment_text_layout"
+                    android:layout_alignRight="@+id/comment_text_layout"
+                    android:layout_alignTop="@+id/comment_text_layout"
+                    android:layout_gravity="right"
+                    android:background="#224cf0"
+                    android:elevation="8dp"
+                    android:text="SHARE" />
+
             </android.support.v7.widget.CardView>
 
             <LinearLayout
@@ -359,6 +372,7 @@
 
                 <!-- <add comment dynamically> -->
             </LinearLayout>
+
 
         </RelativeLayout>
 
@@ -376,28 +390,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Spinner
-                android:id="@+id/fontSizePicker_new"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+            <!--<Spinner-->
+            <!--android:id="@+id/fontSizePicker_new"-->
+            <!--android:layout_width="20dp"-->
+            <!--android:layout_height="20dp"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:background="@drawable/icon_text"-->
+            <!--android:ellipsize="end"-->
+            <!--android:padding="10dp"-->
+            <!--android:prompt="@string/none"-->
+            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+            <!--android:textColor="@color/btn_bg_blue"-->
+            <!--android:textStyle="bold" />-->
+            <ImageView
+                android:id="@+id/bookmarkBlogImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="right"
-                android:layout_margin="5dp"
-                android:background="@drawable/icon_text"
-                android:ellipsize="end"
-                android:padding="10dp"
-                android:prompt="@string/none"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/btn_bg_blue"
-                android:textStyle="bold" />
+                android:src="@drawable/ic_favorite_border_white_48dp" />
 
             <TextView
                 android:id="@+id/titleMain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/fontSizePicker_new"
+                android:layout_toLeftOf="@id/bookmarkBlogImageView"
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:singleLine="true"
