--- a/MyCity4Kids/MyCity4Kids/res/layout/business_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/business_details_activity.xml
@@ -302,13 +302,21 @@
                     android:textSize="18sp" />
 
                 <ImageView
+                    android:id="@+id/img_favourites"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:src="@drawable/ic_favorite_border_white_48dp" />
+
+                <ImageView
                     android:id="@+id/img_round"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:paddingBottom="10dp"
-                    android:paddingLeft="15dp"
                     android:paddingRight="20dp"
                     android:paddingTop="10dp"
                     android:src="@drawable/more_info_new" />
