Improved Share blog functionality and Blogs layout fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
@@ -17,6 +17,13 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/dummy_line" />
 
+    <TextView
+        android:id="@+id/noBlogsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No blogs have been bookmarked yet."
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
