--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_fragment_article_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_fragment_article_new.xml
@@ -14,7 +14,7 @@
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/tabsScrollColor"
         app:tabIndicatorHeight="3dp"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="#EFFFF0"
         app:tabTextColor="#ABD0F8"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
