--- a/MyCity4Kids/MyCity4Kids/res/values/styles.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/styles.xml
@@ -5,6 +5,10 @@
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
 
     -->
+    <style name="SwitchTextAppearance" parent="@android:style/TextAppearance.Holo.Small">
+        <item name="android:textColor">#000000</item>
+    </style>
+        <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar"></style>
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
