invite and signup changes

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_appointmentmain.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_appointmentmain.xml
@@ -101,4 +101,40 @@
 
     </FrameLayout>
 
+    <RelativeLayout
+        android:id="@+id/down_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/holo_blue_dark"
+        android:gravity="bottom"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0000000000000000" />
+
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv0"
+            android:text="1111111111111111" />
+
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv1"
+            android:text="22222222222222222" />
+
+        <TextView
+            android:id="@+id/tv3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv2"
+            android:text="3333333333333333" />
+    </RelativeLayout>
 </RelativeLayout>
