--- a/MyCity4Kids/MyCity4Kids/res/layout/chat_create_list.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/chat_create_list.xml
@@ -32,7 +32,8 @@
         android:dividerHeight="0dp"
         android:layout_weight="1"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"/>
+        android:transcriptMode="normal"
+        />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
