--- a/MyCity4Kids/MyCity4Kids/res/layout/group_create.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_create.xml
@@ -61,6 +61,7 @@
         android:layout_marginRight="15dp"
         android:maxLines="3"
         android:lines="3"
+        android:textColor="#000000"
         />
  <!--   <TextView
         android:layout_width="wrap_content"
