--- a/MyCity4Kids/MyCity4Kids/res/layout/group_detail.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_detail.xml
@@ -1,69 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:elevation="8dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:elevation="8dp"
         android:minHeight="?attr/actionBarSize">
+
         <TextView
+            android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="SAVE"
-            android:id="@+id/next"
-            android:textColor="#ffffff"
-            android:gravity="right"
             android:layout_alignParentRight="true"
             android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            />
+            android:gravity="right"
+            android:text="NEXT"
+            android:textColor="#ffffff" />
     </android.support.v7.widget.Toolbar>
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/groupName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
         android:text="GroupName"
-        android:textSize="20sp"
-        android:layout_marginLeft="30dp"/>
+        android:textColor="#000000"
+        android:textSize="20sp" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:src="@drawable/vertical_divider"
-        android:layout_marginTop="10dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/descriptionHeader"
-        android:text="Description"
-        android:layout_marginLeft="30dp"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/description"
-        android:text="Description"
-        android:layout_marginLeft="30dp"
-        android:textSize="18sp"
         android:layout_marginTop="10dp"
-        android:lines="3"/>
+        android:src="@drawable/vertical_divider" />
+
+    <TextView
+        android:id="@+id/descriptionHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:text="Description"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:lines="3"
+        android:text="Description"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:src="@drawable/vertical_divider"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:src="@drawable/vertical_divider" />
 
+    <LinearLayout
+        android:id="@+id/notificationLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/customNotification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Custom Notification"
+            android:textColor="@color/blue_light"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/vertical_divider" />
+
+    <LinearLayout
+        android:id="@+id/muteLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/mute"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Mute"
+            android:textColor="@color/blue_light"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/muteTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:text="None" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/vertical_divider" />
+
+    <LinearLayout
+        android:id="@+id/leaveGroupLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:id="@+id/leaveGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Leave Group"
+            android:textColor="@color/red_drawer_selected"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/vertical_divider" />
 </LinearLayout>
